tolk-tester/tests/invalid-symbol/err-2619.tolk
fun main() {
    return random();
}

/**
@compilation_should_fail
@stderr `random` is not a function, you probably want `random.uint256()`
 */
